syntax = "proto3";

package proto;

option go_package = "../pb";

import "message.proto";

message Version {
  bool compress = 1;
  int64 size = 2;
  uint64 sequence = 3;
  string hash = 4;
  string name = 5;
  repeated string locations = 6;
}

message ApiQryResp {
  repeated Version data = 1;
}

message JsonResp {
  bytes data = 1;
}

message ApiQryHash {
  string hash = 1;
}

service MetadataApi {
  rpc getVersionsByHash(ApiQryHash) returns (ApiQryResp);
  rpc getPeers(EmptyReq) returns (JsonResp);
}

